# django_portfolio

./: README.md  pyproject.toml
config/: context_processors.py  settings.py  urls.py
main/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  blog-detail.html  blog.html  contact.html  index.html  portfolio-detail.html  portfolio.html
main/templates/main/partials/: footer.html  nav.html
mediafiles/avatar/: happy_mug.jfif
